--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <img class="imgUno"src="./images/1.jpg" alt="galletas, budines y alfajores de avena">
         </section>
 
-        <h1>UN TOQUE DE AMOR Y MAGIA</h1>
+        <h1 data-aos="zoom-in" >UN TOQUE DE AMOR Y MAGIA</h1>
         <section class="elParrafo">
             <h2>¿Quiénes somos?</h2>
 
