--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="./style/style.css">
     <link rel="stylesheet" href="./style/style.css">
     <title>Alimentos saludables</title>
 </head>
@@ -14,32 +17,41 @@
     <div class="envoltura">
         <!-- fila de logo + nav -->
         <header>
-            <nav>
-                <ul>
-                    <li>
-                        <a href="index.html"><img class="loguito"
-                                src="./images/186445118_105841885022465_1996533383860723045_n.jpg" alt="logo"></a>
-                    </li>
-                    <section class="sitios">
-                        <li>
-                            <a class="auno" href="./sections/haztupedido.html">HAZ TU PEDIDO</a>
-                        </li>
-                        <li>
-                            <a class="ados" href="./sections/galeria.html">GALERIA</a>
-                        </li>
-                        <li>
-                            <a class="atres" href="./sections/contacto.html">CONTACTO</a>
-                        </li>
-                        <li>
-                            <a class="acuatro" href="./sections/beneficios.html">BENEFICIOS</a>
-                        </li>
 
-                        <li>
-                            <a class="acinco" href="#footer">IR AL PIE DE PÁGINA</a>
-                        </li>
-                    </section>
-                </ul>
-            </nav>
+            <section class="sitios">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <div class="container-fluid">
+                        
+                         <a href="index.html"><img class="loguito"
+                                    src="./images/186445118_105841885022465_1996533383860723045_n.jpg" alt="logo"></a>
+                       
+                        <a class="navbar-brand active auno" href="./sections/haztupedido.html">HAZ TU PEDIDO</a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                            aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNav">
+                            <ul class="navbar-nav">
+                                <li class="nav-item">
+                                    <a class="nav-link active ados" aria-current="page"
+                                        href="./sections/galeria.html">GALERIA</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active atres" href="./sections/contacto.html">CONTACTO</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active acuatro" href="#footer">BENEFICIOS</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active acinco">IR AL PIE DE PÁGINA</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
+                </nav>
+            </section>
         </header>
     </div>
     <!-- cierre de fila logo + nav -->
@@ -47,11 +59,38 @@
     <!-- Foto + info del emprendimiento-->
 
     <main>
-        <section class="imagenUno">
-            <img class="imgUno"src="./images/1.jpg" alt="galletas, budines y alfajores de avena">
-        </section>
+        <section class="container">
+       <div class="row">
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="./images/30.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="./images/31.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="./images/32.png" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+       </div>
+        </section> <br>
 
-        <h1 data-aos="zoom-in" >UN TOQUE DE AMOR Y MAGIA</h1>
+        <h1 data-aos="zoom-in">UN TOQUE DE AMOR Y MAGIA</h1>
         <section class="elParrafo">
             <h2>¿Quiénes somos?</h2>
 
@@ -82,8 +121,8 @@
         <div class="eventos">
             <img src="./images/evento.jpg" alt="muestra de nuestros alimentos dulces en eventos">
             <p>¡Para eventos comunicate con nosotros!</p>
-            <p>03442-15426342</p><img class="flecha" src="https://img.icons8.com/clouds/100/000000/up.png" alt=""data-aos="fade-up"
-            data-aos-duration="3000"/>
+            <p>03442-15426342</p><img class="flecha" src="https://img.icons8.com/clouds/100/000000/up.png" alt=""
+                data-aos="fade-up" data-aos-duration="3000" />
         </div>
     </section>
 
@@ -109,7 +148,10 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
-      </script>
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
