--- a/sections/haztupedido.html
+++ b/sections/haztupedido.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../style/style.css">
     <title>Alimentos saludables</title>
 </head>
@@ -13,31 +15,40 @@
     <div class="envolturaDos">
         <header class="hDos">
 
-            <nav>
-                <ul>
-                    <li>
-                        <a href="../index.html"><img class="loguito"
-                                src="../images/186445118_105841885022465_1996533383860723045_n.jpg" alt="logo"></a>
-                    </li>
-                    <section class="sitios">
-                        <li>
-                            <a href="./haztupedido.html">HAZ TU PEDIDO</a>
-                        </li>
-                        <li>
-                            <a href="./galeria.html">GALERIA</a>
-                        </li>
-                        <li>
-                            <a href="./contacto.html">CONTACTO</a>
-                        </li>
-                        <li>
-                            <a href="./beneficios.html">BENEFICIOS</a>
-                        </li>
-                        <li>
-                            <a class="acinco" href="#footer">IR AL PIE DE PÁGINA</a>
-                        </li>
-                    </section>
-                </ul>
-            </nav>
+            <section class="sitios">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <div class="container-fluid">
+                       
+                            <a href="../index.html"><img class="loguito"
+                                    src="../images/186445118_105841885022465_1996533383860723045_n.jpg" alt="logo"></a>
+                    
+                        <a class="navbar-brand active auno" href="../sections/haztupedido.html">HAZ TU PEDIDO</a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                            aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNav">
+                            <ul class="navbar-nav">
+                                <li class="nav-item">
+                                    <a class="nav-link active ados" aria-current="page"
+                                        href="../sections/galeria.html">GALERIA</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active atres" href="../sections/contacto.html">CONTACTO</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active acuatro" href="../sections/beneficios.html">BENEFICIOS</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active acinco" href="#footer">IR AL PIE DE PÁGINA</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
+                </nav>
+            </section>
         </header>
     </div>
     <!-- cierre de fila logo + nav -->
@@ -87,10 +98,10 @@
 
     <div class="rowDos">
         <section class="avTres">
-        <div>
-            <img class="imgDos" src="../images/13.png" alt="muffin de chocolate y vainilla"> <br><input class="in"
-                type="reset" value="Agregar">
-        </div>
+            <div>
+                <img class="imgDos" src="../images/13.png" alt="muffin de chocolate y vainilla"> <br><input class="in"
+                    type="reset" value="Agregar">
+            </div>
         </section>
         <section class="avCuatro">
             <div>
@@ -123,7 +134,9 @@
         <h3>DIRECCIÓN: Ruiz Moreno 1025</h3>
     </footer>
     <!-- cierre de footer -->
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
