--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                                     <a class="nav-link active atres" href="./sections/contacto.html">CONTACTO</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active acuatro" href="#footer">BENEFICIOS</a>
+                                    <a class="nav-link active acuatro" href="./sections/beneficios.html">BENEFICIOS</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active acinco">IR AL PIE DE PÁGINA</a>
+                                    <a class="nav-link active acinco" href="#footer">IR AL PIE DE PÁGINA</a>
                                 </li>
                             </ul>
                         </div>
