--- a/sections/beneficios.html
+++ b/sections/beneficios.html
@@ -67,8 +67,8 @@
             </iframe>
         </div>
         <div class="importante">
-            <h2 class="beneficios">¿Qué pasa si uno consume avena?</h2>
-            <ol>
+            <h2 class="beneficios">¿Qué pasa si consumimos avena?</h2>
+            <ul>
 
                 <li>Puede ayudar en la pérdida de peso.</li>
                 <li>Ayuda en el control del azúcar en sangre.</li>
@@ -76,15 +76,19 @@
                 <li>Rica en atioxidantes.</li>
                 <li>Aporta mucha energí.</li>
 
-            </ol>
+            </ul>
         </div>
     </article>
 
     <section>
         <div class="redes">
-            <img class="icon" src="https://img.icons8.com/bubbles/50/000000/email--v1.png" alt="email">
-            <img class="icon" src="https://img.icons8.com/bubbles/50/000000/facebook-new.png" alt="facebook">
-            <img class="icon" src="https://img.icons8.com/bubbles/50/000000/instagram-new--v2.png" alt="instagram">
+            <a href="../sections/contacto.html"><img class="icon"
+                    src="https://img.icons8.com/bubbles/50/000000/email--v1.png" alt="logo"></a>
+            <a href="https://www.facebook.com/Un-toque-de-amor-y-magia-105840878355899"><img class="icon"
+                    src="https://img.icons8.com/bubbles/50/000000/facebook-new.png" alt="logo"></a>
+            <a href="https://www.instagram.com/un.toque.de.amor.y.magia/"><img class="icon"
+                    src="https://img.icons8.com/bubbles/50/000000/instagram-new--v2.png" alt="logo"></a>
+
         </div>
     </section>
 
