--- a/sections/haztupedido.html
+++ b/sections/haztupedido.html
@@ -18,10 +18,10 @@
             <section class="sitios">
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
                     <div class="container-fluid">
-                       
-                            <a href="../index.html"><img class="loguito"
-                                    src="../images/186445118_105841885022465_1996533383860723045_n.jpg" alt="logo"></a>
-                    
+
+                        <a href="../index.html"><img class="loguito"
+                                src="../images/186445118_105841885022465_1996533383860723045_n.jpg" alt="logo"></a>
+
                         <a class="navbar-brand active auno" href="../sections/haztupedido.html">HAZ TU PEDIDO</a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
@@ -63,6 +63,10 @@
         </div>
 
     </section>
+    <div> 
+        <button type="button" class="btn btn-secondary btn-sm p-3 mb-2 bg-light text-dark">ENVIAR</button>
+    </div><br>
+   
     <section class="budyalf">
         <h2>BUDINES Y ALFAJORES</h2>
     </section>
@@ -119,9 +123,13 @@
     </div>
     <section>
         <div class="redes">
-            <img class="icon" src="https://img.icons8.com/bubbles/50/000000/email--v1.png" alt="email">
-            <img class="icon" src="https://img.icons8.com/bubbles/50/000000/facebook-new.png" alt="facebook">
-            <img class="icon" src="https://img.icons8.com/bubbles/50/000000/instagram-new--v2.png" alt="instagram">
+            <a href="../sections/contacto.html"><img class="icon"
+                    src="https://img.icons8.com/bubbles/50/000000/email--v1.png" alt="logo"></a>
+            <a href="https://www.facebook.com/Un-toque-de-amor-y-magia-105840878355899"><img class="icon"
+                    src="https://img.icons8.com/bubbles/50/000000/facebook-new.png" alt="logo"></a>
+            <a href="https://www.instagram.com/un.toque.de.amor.y.magia/"><img class="icon"
+                    src="https://img.icons8.com/bubbles/50/000000/instagram-new--v2.png" alt="logo"></a>
+
         </div>
     </section>
 
