--- a/sections/contacto.html
+++ b/sections/contacto.html
@@ -109,9 +109,13 @@
     <!-- cierre de form contacto -->
     <section>
         <div class="redes">
-            <img class="icon" src="https://img.icons8.com/bubbles/50/000000/email--v1.png" alt="email">
-            <img class="icon" src="https://img.icons8.com/bubbles/50/000000/facebook-new.png" alt="facebook">
-            <img class="icon" src="https://img.icons8.com/bubbles/50/000000/instagram-new--v2.png" alt="instagram">
+            <a href="../sections/contacto.html"><img class="icon"
+                    src="https://img.icons8.com/bubbles/50/000000/email--v1.png" alt="logo"></a>
+            <a href="https://www.facebook.com/Un-toque-de-amor-y-magia-105840878355899"><img class="icon"
+                    src="https://img.icons8.com/bubbles/50/000000/facebook-new.png" alt="logo"></a>
+            <a href="https://www.instagram.com/un.toque.de.amor.y.magia/"><img class="icon"
+                    src="https://img.icons8.com/bubbles/50/000000/instagram-new--v2.png" alt="logo"></a>
+
         </div>
     </section>
     <section>
