--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./estilo/style.css">
     <link rel="stylesheet" href="./estilo/style.css">
-    <title>Alimentos saludables</title>
+    <title>Inicio - alimentosSaludables</title>
+    <meta name="description" content="Empresa de venta de alimentos saludables, reseta familia de años. Comidas realizadas con amor y dedicación.">
+    <meta name="author" content="PaolaC">
+    <meta name="copyrigt" content="empresaAlimentosSaludables">
 </head>
 
 <body>
@@ -93,7 +96,7 @@
                     </button>
                 </div>
             </div>
-        </section> <br>
+        </section> 
 
         <h1 data-aos="zoom-in">UN TOQUE DE AMOR Y MAGIA</h1>
         <section class="elParrafo">
