--- a/sections/galeria.html
+++ b/sections/galeria.html
@@ -8,7 +8,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="../estilo/style.css">
-    <title>Alimentos saludables</title>
+    <title>Alimentos - alimentosSaludables</title>
+    <meta name="description" content="Observá nuestra variedad de ricos y sanos productos.">
+    <meta name="author" content="PaolaC">
+    <meta name="copyrigt" content="empresaAlimentosSaludables">
 </head>
 
 <body>
@@ -59,37 +62,38 @@
     <section class="productos">
         <h1>NUESTROS PRODUCTOS</h1>
     </section>
+    <h2>RICOS Y SALUDABLES</h2>
 
     <section class="fotosProd">
         <div class="row">
             <div class="avone">
                 <div>
                     <img class="imgTres" src="../images/2.jpg"
-                        alt="budín de avena saborizado con naranja y chips de chocolates"> <br>
+                        alt="budín de avena saborizado con naranja y chips de chocolates"> 
                     <p class="texto">Budín de avena saborizado con naranja y chips de chocolates</p>
                 </div>
                 <div>
-                    <img class="imgTres" src="../images/3.jpg" alt="budín con frutos secos y alfajores"> <br>
+                    <img class="imgTres" src="../images/3.jpg" alt="budín con frutos secos y alfajores"> 
                     <p class="texto">Budín con frutos secos y alfajores</p>
                 </div>
             </div>
             <div class="avtwo">
                 <div>
-                    <img class="imgTres" src="../images/4.jpg" alt="budín con frutos secos"> <br>
+                    <img class="imgTres" src="../images/4.jpg" alt="budín con frutos secos"> 
                     <p class="texto">Budín con frutos secos</p>
                 </div>
                 <div>
-                    <img class="imgTres" src="../images/5.jpg" alt="galletitas pepas"> <br>
+                    <img class="imgTres" src="../images/5.jpg" alt="galletitas pepas"> 
                     <p class="texto">Galletitas pepas artesanales con membrillo 100% orgánico</p>
                 </div>
             </div>
             <div class="avthree">
                 <div>
-                    <img class="imgTres" src="../images/6.jpg" alt="budín de limón con mixs de semillas"> <br>
+                    <img class="imgTres" src="../images/6.jpg" alt="budín de limón con mixs de semillas"> 
                     <p class="texto">Budín de limón con mixs de semillas</p>
                 </div>
                 <div>
-                    <img class="imgTres" src="../images/7.jpg" alt="bizcochuelo de cacao y avena"> <br>
+                    <img class="imgTres" src="../images/7.jpg" alt="bizcochuelo de cacao y avena"> 
                     <p class="texto">Bizcochuelo de avena y harina integral con cacao</p>
                 </div>
             </div>
