--- a/sections/beneficios.html
+++ b/sections/beneficios.html
@@ -8,7 +8,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="../estilo/style.css">
-    <title>Alimentos saludables</title>
+    <title>Beneficios - alimentosSaludables</title>
+    <meta name="description" content="Enterate de los grandes beneficios de consumir estos alimentos.">
+    <meta name="author" content="PaolaC">
+    <meta name="copyrigt" content="empresaAlimentosSaludables">
+  
 </head>
 
 <body>
@@ -59,6 +63,7 @@
 
     <article class="info">
         <h1 class="benef">BENEFICIOS POR CONSUMIR AVENA</h1>
+        <h2>IMPORTANTE PARA TU SALUD.</h2>
         <div class="video">
             <iframe width="450" height="250" src="https://www.youtube.com/embed/XaScAZUearM"
                 title="YouTube video player" frameborder="0"
