--- a/sections/contacto.html
+++ b/sections/contacto.html
@@ -9,7 +9,10 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="../estilo/style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <title>Alimentos saludables</title>
+    <title>Contactanos - alimentosSaludables</title>
+    <meta name="description" content="Contactanos para tus maravillosos eventos o para disfrutar de ricos desayonos y meriendas.">
+    <meta name="author" content="PaolaC">
+    <meta name="copyrigt" content="empresaAlimentosSaludables">
 </head>
 
 <body>
@@ -61,6 +64,7 @@
     </div>
     <section class="contactanos">
         <h1 class="contactto">CONTACTANOS</h1>
+        <h2>Realizamos tu evento y te ayudamos a disfrutar de un rico desayuno o merienda</h2>
         <!-- formulario de contacto -->
     </section>
     <section>
@@ -107,6 +111,8 @@
         
     </section>
     <!-- cierre de form contacto -->
+    <div><a href="../index.html"><input type="button" value="Inicio" class="btn--inicio"></a></div>
+    <div><a href="./haztupedido.html"><input type="button" value="Pedido" class="btn--pedido"></a></div>
     <section>
         <div class="redes">
             <a href="../sections/contacto.html"><img class="icon"
