--- a/sections/haztupedido.html
+++ b/sections/haztupedido.html
@@ -8,7 +8,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="../estilo/style.css">
-    <title>Alimentos saludables</title>
+    <title>Realiza tus pedidos - alimentosSaludables</title>
+    <meta name="description" content="Elegí la opción de comida saludable y disfrutá de un sabor único.">
+    <meta name="author" content="PaolaC">
+    <meta name="copyrigt" content="empresaAlimentosSaludables">
 </head>
 
 <body>
@@ -54,19 +57,19 @@
     <!-- cierre de fila logo + nav -->
     <section class="mandados">
         <div>
-            <img class="moto" src="https://img.icons8.com/ios-filled/50/000000/dirt-bike.png" /><br> <input type="text"
+            <img class="moto" src="https://img.icons8.com/ios-filled/50/000000/dirt-bike.png" /> <input type="text"
                 placeholder="DECIME TU DIRECCIÓN">
         </div>
         <div>
-            <img class="whatsapp" src="https://img.icons8.com/clouds/100/000000/whatsapp.png" /><br> <input type="text"
+            <img class="whatsapp" src="https://img.icons8.com/clouds/100/000000/whatsapp.png" /> <input type="text"
                 placeholder="HAZ TU PEDIDO POR WHATSAPP">
         </div>
 
     </section>
     <div> 
-        <button type="button" class="btn btn-secondary btn-sm p-3 mb-2 bg-light text-dark">ENVIAR</button>
-    </div><br>
-   
+        <button class="inputt" type="button" class="btn btn-secondary btn-sm p-3 mb-2 bg-light text-dark">ENVIAR</button>
+    </div>
+   <h1>PEDIDOS</h1>
     <section class="budyalf">
         <h2>BUDINES Y ALFAJORES</h2>
     </section>
@@ -76,24 +79,24 @@
         <section class="avUno">
             <div>
                 <img class="imgDos" src="../images/11.jpg" alt="budín integral con avena y frutos del bosque">
-                <br><input class="in" type="reset" value="Agregar">
+                <input class="in" type="reset" value="Agregar">
             </div>
             <div>
-                <img class="imgDos" src="../images/9.jpg" alt="budín de chocolate y frutilla"> <br><input class="in"
+                <img class="imgDos" src="../images/9.jpg" alt="budín de chocolate y frutilla"> <input class="in"
                     type="reset" value="Agregar">
             </div>
         </section>
         <section class="avDos">
             <div>
-                <img class="imgDos" src="../images/8.jpg" alt="budín de chocolate y maní"> <br><input class="in"
+                <img class="imgDos" src="../images/8.jpg" alt="budín de chocolate y maní"> <input class="in"
                     type="reset" value="Agregar">
             </div>
             <div>
-                <img class="imgDos" src="../images/3.jpg" alt="alfajores y budín con baño de chocolate"> <br><input
+                <img class="imgDos" src="../images/3.jpg" alt="alfajores y budín con baño de chocolate"> <input
                     class="in" type="reset" value="Agregar">
             </div>
             <div>
-                <img class="imgDos" src="../images/4.jpg" alt="budín marmolado con nueces"> <br><input class="in"
+                <img class="imgDos" src="../images/4.jpg" alt="budín marmolado con nueces"> <input class="in"
                     type="reset" value="Agregar">
             </div>
         </section>
@@ -103,18 +106,18 @@
     <div class="rowDos">
         <section class="avTres">
             <div>
-                <img class="imgDos" src="../images/13.png" alt="muffin de chocolate y vainilla"> <br><input class="in"
+                <img class="imgDos" src="../images/13.png" alt="muffin de chocolate y vainilla"> <input class="in"
                     type="reset" value="Agregar">
             </div>
         </section>
         <section class="avCuatro">
             <div>
-                <img class="imgDos" src="../images/10.jpg" alt="muffin de frutos del bosque y membrillo"> <br><input
+                <img class="imgDos" src="../images/10.jpg" alt="muffin de frutos del bosque y membrillo"> <input
                     class="in" type="reset" value="Agregar">
             </div>
 
             <div>
-                <img class="imgDos" src="../images/12.png" alt="masas de limón y avena"> <br><input class="in"
+                <img class="imgDos" src="../images/12.png" alt="masas de limón y avena"> <input class="in"
                     type="reset" value="Agregar">
             </div>
 
