--- a/sections/beneficios.html
+++ b/sections/beneficios.html
@@ -91,13 +91,15 @@
                     src="https://img.icons8.com/bubbles/50/000000/facebook-new.png" alt="logo"></a>
             <a href="https://www.instagram.com/un.toque.de.amor.y.magia/"><img class="icon"
                     src="https://img.icons8.com/bubbles/50/000000/instagram-new--v2.png" alt="logo"></a>
+            <a href="https://www.google.com.ar/maps/place/Jordana+415,+Concepci%C3%B3n+del+Uruguay,+Entre+R%C3%ADos/@-32.4901291,-58.2298862,17z/data=!3m1!4b1!4m5!3m4!1s0x95afdb0f6705faa5:0x9fb4222d5dc592be!8m2!3d-32.4901336!4d-58.2276975"><img class="icon"
+                    src="https://img.icons8.com/bubbles/50/000000/google-maps.png" alt="logo"></a>
 
         </div>
     </section>
 
     <!-- inicio de footer -->
     <footer id="footer">
-        <img class="loguito" src="../images/186445118_105841885022465_1996533383860723045_n.jpg" alt="logo">
+        <img class="loguitoDos" src="../images/186445118_105841885022465_1996533383860723045_n.jpg" alt="logo">
         <h3>HORARIO: 08:00hs a 20:00hs</h3>
         <h3>TEL. (03442)-446342</h3>
         <h3>WHATSAPP: 03442-15426342</h3>
