--- a/sections/haztupedido.html
+++ b/sections/haztupedido.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <link rel="stylesheet" href="../estilo/style.css">
+    <link rel="stylesheet" href="../estilo/style.css">
     <title>Realiza tus pedidos - alimentosSaludables</title>
     <meta name="description" content="Elegí la opción de comida saludable y disfrutá de un sabor único.">
     <meta name="author" content="PaolaC">
@@ -66,10 +66,11 @@
         </div>
 
     </section>
-    <div> 
-        <button class="inputt" type="button" class="btn btn-secondary btn-sm p-3 mb-2 bg-light text-dark">ENVIAR</button>
+    <div>
+        <button class="inputt" type="button"
+            class="btn btn-secondary btn-sm p-3 mb-2 bg-light text-dark">ENVIAR</button>
     </div>
-   <h1>PEDIDOS</h1>
+    <h1>PEDIDOS</h1>
     <section class="budyalf">
         <h2>BUDINES Y ALFAJORES</h2>
     </section>
@@ -117,8 +118,8 @@
             </div>
 
             <div>
-                <img class="imgDos" src="../images/12.png" alt="masas de limón y avena"> <input class="in"
-                    type="reset" value="Agregar">
+                <img class="imgDos" src="../images/12.png" alt="masas de limón y avena"> <input class="in" type="reset"
+                    value="Agregar">
             </div>
 
         </section>
@@ -132,13 +133,15 @@
                     src="https://img.icons8.com/bubbles/50/000000/facebook-new.png" alt="logo"></a>
             <a href="https://www.instagram.com/un.toque.de.amor.y.magia/"><img class="icon"
                     src="https://img.icons8.com/bubbles/50/000000/instagram-new--v2.png" alt="logo"></a>
+            <a href="https://www.google.com.ar/maps/place/Jordana+415,+Concepci%C3%B3n+del+Uruguay,+Entre+R%C3%ADos/@-32.4901291,-58.2298862,17z/data=!3m1!4b1!4m5!3m4!1s0x95afdb0f6705faa5:0x9fb4222d5dc592be!8m2!3d-32.4901336!4d-58.2276975"><img
+                    class="icon" src="https://img.icons8.com/bubbles/50/000000/google-maps.png" alt="logo"></a>
 
         </div>
     </section>
 
     <!-- inicio de footer -->
     <footer id="footer">
-        <img class="loguito" src="../images/186445118_105841885022465_1996533383860723045_n.jpg" alt="logo">
+        <img class="loguitoDos" src="../images/186445118_105841885022465_1996533383860723045_n.jpg" alt="logo">
         <h3>HORARIO: 08:00hs a 20:00hs</h3>
         <h3>TEL. (03442)-446342</h3>
         <h3>WHATSAPP: 03442-15426342</h3>
