--- a/index.html
+++ b/index.html
@@ -121,7 +121,9 @@
                     href="https://www.facebook.com/Un-toque-de-amor-y-magia-105840878355899" target="_blank"
                     rel="noopener noreferrer">hacer click aquí.</a> </p>
         </section>
+      <div id="nuevoDiv">
 
+      </div>
 
     </main>
 
@@ -160,7 +162,7 @@
         <h3>DIRECCIÓN: Ruiz Moreno 1025</h3>
     </footer>
     <!-- cierre de footer -->
-    <script src="./main.js"></script>
+    <script src="./JavaS/main.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
