--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <a href="index.html"><img class="loguito"
                                 src="./images/186445118_105841885022465_1996533383860723045_n.jpg" alt="logo"></a>
 
-                        <a class="navbar-brand active auno" href="./sections/haztupedido.html">HAZ TU PEDIDO</a>
+                        <a class="navbar-brand active auno" href="./sections/ingredientes.html">INGREDIENTES</a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                             aria-label="Toggle navigation">
@@ -130,10 +130,9 @@
     <section>
         <div class="eventos">
             <img class="event" src="./images/av3.png" alt="muestra de nuestros alimentos dulces en eventos">
-            <p class="fw-bold">¡PARA EVENTOS COMUNICATE CON NOSOTROS!</p>
-            <a href="https://wa.me/0344215418317"><img class="icon" src="https://img.icons8.com/plasticine/100/000000/whatsprank.png"/>
-            <a href="https://wa.me/0344215418317"><img id="flechita"
-                src="https://img.icons8.com/clouds/100/000000/up.png" alt="logo"  data-aos="fade-up" data-aos-duration="3000"></a>
+            <p class="fw-bold">¡SOLO REALIZAMOS EVENTOS, COMUNICATE CON NOSOTROS!</p>
+            <a href="https://wa.me/0344215418317"><img class="icon" src="https://img.icons8.com/plasticine/100/000000/whatsprank.png" alt="logo"/> 
+            <a href="https://wa.me/0344215418317"><img id="flechita" src="https://img.icons8.com/clouds/100/000000/up.png" alt="logo"  data-aos="fade-up" data-aos-duration="3000"></a>
            
         </div>
     </section>
