--- a/sections/galeria.html
+++ b/sections/galeria.html
@@ -12,6 +12,7 @@
     <meta name="description" content="Observá nuestra variedad de ricos y sanos productos.">
     <meta name="author" content="PaolaC">
     <meta name="copyrigt" content="empresaAlimentosSaludables">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 </head>
 
 <body>
@@ -28,7 +29,7 @@
                             <a href="../index.html"><img class="loguito"
                                     src="../images/186445118_105841885022465_1996533383860723045_n.jpg" alt="logo"></a>
                                     
-                         <a class="navbar-brand active auno" href="../sections/haztupedido.html">HAZ TU PEDIDO</a>
+                         <a class="navbar-brand active auno" href="../sections/ingredientes.html">INGREDIENTES</a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                             aria-label="Toggle navigation">
@@ -123,6 +124,8 @@
         <h3>DIRECCIÓN: Ruiz Moreno 1025</h3>
     </footer>
     <!-- cierre de footer -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="../JavaS/galeria.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
