--- a/sections/ingredientes.html
+++ b/sections/ingredientes.html
@@ -25,7 +25,7 @@
                         <a href="../index.html"><img class="loguito"
                                 src="../images/186445118_105841885022465_1996533383860723045_n.jpg" alt="logo"></a>
 
-                        <a class="navbar-brand active auno" href="../sections/haztupedido.html">HAZ TU PEDIDO</a>
+                        <a class="navbar-brand active auno" href="../sections/ingredientes.html">INGREDIENTES</a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                             aria-label="Toggle navigation">
@@ -54,15 +54,13 @@
             </section>
         </header>
     </div>
-    <!-- cierre de fila logo + nav -->
+
+     <!-- cierre de fila logo + nav -->
     <section class="mandados">
-        <div>
-            <img class="moto" src="https://img.icons8.com/ios-filled/50/000000/dirt-bike.png" /> <input type="text" id="direc"
-                placeholder="DECIME TU DIRECCIÓN"/>
-        </div>
+       
         <div>
             <img class="whatsapp" src="https://img.icons8.com/clouds/100/000000/whatsapp.png" /> <input type="text" id="mensaj"
-                placeholder="HAZ TU PEDIDO POR WHATSAPP"/>
+                placeholder="DEJANOS UN MENSAJE"/>
         </div>
 
     </section>
@@ -70,7 +68,7 @@
         <button id="boton" class="inputt"  type="button"
             class="btn btn-secondary btn-sm p-3 mb-2 bg-light text-dark">ENVIAR</button>
     </div>
-    <h1>PEDIDOS</h1>
+    <h1>INGREDIENTES</h1>
     <section class="budyalf">
         <h2>BUDINES Y ALFAJORES</h2>
     </section>
@@ -79,22 +77,48 @@
 
         <section class="avUno">
             <div>
-                <img class="imgDos" src="../images/11.jpg" alt="budín integral con avena y frutos del bosque"><p class="texto">$800</p>
-                <button  class="inputt"  type="button" class="btn btn-secondary btn-sm p-3 mb-2 bg-light text-dark">Agregar</button>
+                <img class="imgDos" src="../images/11.jpg" alt="budín integral con avena y frutos del bosque"><p class="texto">100 g. Frutos rojos
+                    200 ml. Leche descremada líquida
+                    60 g. Harina de avena
+                    30 g. Coco rallado
+                    A gusto edulcorante
+                    1 huevo entero + 1 clara
+                    1 cucharada esencia de vainilla
+                    1 cucharada canela
+                    1 cucharada polvo para hornear</p>
             </div>
             <div>
-                <img class="imgDos" src="../images/9.jpg" alt="budín de chocolate y frutilla"><p class="texto">$800</p> <button  class="inputt"  type="button" class="btn btn-secondary btn-sm p-3 mb-2 bg-light text-dark">Agregar</button>
+                <img class="imgDos" src="../images/9.jpg" alt="budín de chocolate y frutilla"><p class="texto">2 huevos
+                    2 tazas avena
+                    1 taza yogurt de frutilla
+                    2 cucharas polvo de hornear
+                    1/2 taza azúcar
+                    5 frutillas</p> 
             </div>
         </section>
         <section class="avDos">
             <div>
-                <img class="imgDos" src="../images/8.jpg" alt="budín de chocolate y maní"><p class="texto">$800</p> <button  class="inputt"  type="button" class="btn btn-secondary btn-sm p-3 mb-2 bg-light text-dark">Agregar</button>
+                <img class="imgDos" src="../images/8.jpg" alt="budín de chocolate y maní"><p class="texto">130gr de Harina integral fina
+                    100gr de Azúcar Mascabo
+                    70gr de Aceite de Girasol
+                    2 Huevos
+                    2 Cucharadas de Crema/Pasta de maní (Ver receta)
+                    ¼ Taza de Agua o Leche vegetal (aproximado)
+                    1 Cucharadita de Polvo para hornear
+                    ½ Cucharadita de Bicarbonato de Sodio
+                    ½ Cucharadita de Extracto de vainilla
+                    ¼ de Cucharadita de Canela en polvo
+                    Chips de Chocolate, Cantidad a gusto</p> 
             </div>
             <div>
-                <img class="imgDos" src="../images/3.jpg" alt="alfajores y budín con baño de chocolate"> <p class="texto">$1500</p><button  class="inputt"  type="button" class="btn btn-secondary btn-sm p-3 mb-2 bg-light text-dark">Agregar</button>
-            </div>
-            <div>
-                <img class="imgDos" src="../images/4.jpg" alt="budín marmolado con nueces"> <p class="texto">$800</p> <button  class="inputt"  type="button" class="btn btn-secondary btn-sm p-3 mb-2 bg-light text-dark">Agregar</button>
+                <img class="imgDos" src="../images/4.jpg" alt="budín marmolado con nueces"> <p class="texto">2 bananas
+                    2 huevos
+                    1 cucharada polvo de hornear
+                    1 taza azúcar mascabo
+                    1/2 taza harina de algarroba o cacao en polvo
+                    1/3 taza aceite
+                    Cantidad necesaria harina integral
+                    Nueces/chips/pasas (opcional)</p> 
             </div>
         </section>
     </div>
@@ -103,16 +127,41 @@
     <div class="rowDos">
         <section class="avTres">
             <div>
-                <img class="imgDos" src="../images/13.png" alt="muffin de chocolate y vainilla"><p class="texto">$100 c/u</p> <button  class="inputt"  type="button" class="btn btn-secondary btn-sm p-3 mb-2 bg-light text-dark">Agregar</button>
+                <img class="imgDos" src="../images/13.png" alt="muffin de chocolate y vainilla"><p class="texto">150gr de Harina integral fina
+                    100gr de Azúcar Mascabo
+                    100gr (125cc apróx.) de Aceite de Girasol
+                    70gr de Cacao amargo en polvo
+                    2 Huevos
+                    1 Taza de Leche vegetal (Aproximadamente)
+                    1 Cucharadita de Extracto de Vainilla
+                    ½ Cucharadita de Bicarbonato de sodio
+                    Chips o pedacitos de chocolate semiamargo en barra. Cantidad a gusto</p> 
             </div>
         </section>
         <section class="avCuatro">
             <div>
-                <img class="imgDos" src="../images/10.jpg" alt="muffin de frutos del bosque y membrillo"> <p class="texto">$150 c/u</p><button  class="inputt"  type="button" class="btn btn-secondary btn-sm p-3 mb-2 bg-light text-dark">Agregar</button>
+                <img class="imgDos" src="../images/10.jpg" alt="muffin de frutos del bosque y membrillo"> <p class="texto">50 ml Aceite de girasol
+                    60 g Azúcar moreno
+                    1 Clara de huevo
+                    1 Cucharada canela molida
+                    1/2 Cucharadita bicarbonato de sodio
+                    1 Cucharadita levadura
+                    200 g Frutos rojos (fresas, moras, arándanos)
+                    300 g Harina integral
+                    2 Huevos
+                    130 ml Leche descremada
+                    Ralladura y jugo de un limón</p>
             </div>
 
             <div>
-                <img class="imgDos" src="../images/12.png" alt="masas de limón y avena"> <p class="texto">$80 c/u</p><button  class="inputt"  type="button" class="btn btn-secondary btn-sm p-3 mb-2 bg-light text-dark">Agregar</button>
+                <img class="imgDos" src="../images/12.png" alt="masas de limón y avena"> <p class="texto">30 gr de coco rallado
+                    70gr de avena
+                    2 sobrecitos de endulzado
+                    esencia de vainilla
+                    1/2 cdita de polvo de hornear
+                    ralladura de 1 limón
+                    pizca de sal
+                    1 huevo</p>
             </div>
 
         </section>
@@ -141,7 +190,7 @@
         <h3>DIRECCIÓN: Ruiz Moreno 1025</h3>
     </footer>
     <!-- cierre de footer -->
-    <script src="../JavaS/mainHaztuP.js"></script>
+    <script src="../JavaS/ingrediente.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
