--- a/sections/beneficios.html
+++ b/sections/beneficios.html
@@ -28,7 +28,7 @@
                         <a href="../index.html"><img class="loguito"
                                 src="../images/186445118_105841885022465_1996533383860723045_n.jpg" alt="logo"></a>
 
-                        <a class="navbar-brand active auno" href="../sections/haztupedido.html">HAZ TU PEDIDO</a>
+                        <a class="navbar-brand active auno" href="../sections/ingredientes.html">INGREDIENTES</a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                             aria-label="Toggle navigation">
@@ -96,7 +96,7 @@
 
         </div>
     </section>
-
+  
     <!-- inicio de footer -->
     <footer id="footer">
         <img class="loguitoDos" src="../images/186445118_105841885022465_1996533383860723045_n.jpg" alt="logo">
@@ -106,6 +106,7 @@
         <h3>DIRECCIÓN: Ruiz Moreno 1025</h3>
     </footer>
     <!-- cierre de footer -->
+    <script src="../JavaS/beneficios.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
